--- a/style/main.css
+++ b/style/main.css
@@ -7,9 +7,12 @@
 }
 
 header {
-  text-align: center;
   padding: 1em 0;
   font-size: 2em;
+
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 #city-input {
