--- a/style/main.css
+++ b/style/main.css
@@ -15,9 +15,19 @@ header {
   align-items: center;
 }
 
-#city-input {
-  text-align: center;
+/* Styling for the search bar */
+#city-search {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   margin: 1em 0;
+}
+
+#city-input {
+  display: flex;
+  width: 100%;
+  justify-content: center;
 }
 
 #city-input input {
@@ -31,6 +41,7 @@ header {
   font-size: 1em;
 }
 
+/* Styling for the main weather display */
 #weather-display {
   display: grid;
   grid-template-areas:
@@ -75,4 +86,17 @@ header {
 
 #sky-info {
   grid-area: sky-info;
+}
+#location-display {
+  font-size: 1.3em;
+}
+
+/* Styling for the location list */
+.location-card {
+  padding: 0.2em;
+  width: fit-content;
+}
+
+.location-card:hover {
+  background-color: #f9f9f9;
 }
