feat: add clothing images display rules
- Add a section to display clothing images in main html
- Apply basic style and layout to the secction in grid
- Implement function to decide which images to display based on the weather at the selected location.

--- a/style/main.css
+++ b/style/main.css
@@ -87,8 +87,13 @@ header {
 #sky-info {
   grid-area: sky-info;
 }
+
 #location-display {
   font-size: 1.3em;
+}
+
+#clothing-recommendation {
+  grid-area: clothing;
 }
 
 /* Styling for the location list */
